# doubtless

./: .gitignore  README.md  Test.scala  build.sbt  cmds  log4j.properties
dbt/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
dbt/experiment_results/6407900f090cc50c2d7bebf376956c1b/: execution_times.npy
dbt/macros/: refresh_spark_table.sql
dbt/macros/experiments/: run_prob_avg_experiment.sql  run_prob_count_experiment.sql  run_prob_max_experiment.sql  run_prob_min_experiment.sql  run_prob_sum_experiment.sql  set_config.sql
dbt/macros/generation/: generate_bdd_dummy_data.sql
dbt/macros/ingestion/: create_raw_schema.sql  ingest_wdc_data.sql
dbt/macros/query_management/: abort_running_experiments.sql
dbt/macros/udfs/: create_bdd_udafs.sql  create_bdd_udfs.sql  create_config_udf.sql  create_pgbdd_extension.sql  create_prob_dict_udfs.sql  create_prob_udafs.sql  create_udfs.sql  postgres_prob_avg_udaf.sql  postgres_prob_count_udaf.sql  postgres_prob_max_udaf.sql  postgres_prob_min_udaf.sql  postgres_prob_sum_udaf.sql
dbt/macros/utils/: bdd_utils.sql  get_from_struct.sql  remove_surrounding_brackets.sql  string_agg.sql
dbt/metastore_db/: db.lck  service.properties
dbt/metastore_db/log/: log.ctrl
dbt/models/: dbt_sources.yml
dbt/models/example/: example_sum.sql  example_wdc.sql  my_first_dbt_model.sql  my_second_dbt_model.sql  schema.yml
dbt/models/staging/: stg_dummy__gigabyte_dataset.sql  stg_dummy__sized_bdds.sql  (+2 more)
dbt/scripts/: Aggregation Analysis.ipynb  Download WDC.py  Integration Analysis.ipynb  Overhead Analysis.ipynb  agg_experiments.py  integration_experiments.py  overhead_experiments.py  prob_count_experiments.py  prob_sum_experiments.py  test_experiments.py
(+4793 files in other folders)
