[project]
name = "dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.9.1",
    "dbt-postgres>=1.9.0",
    "dbt-spark[pyhive]>=1.9.0",
    "matplotlib>=3.10.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
]
