[project]
name = "dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.11",
    "dbt-databricks>=1.10.3",
    "dbt-postgres>=1.9.1",
    "dbt-spark[odbc,pyhive]>=1.9.3",
    "pyodbc>=5.2.0",
    "matplotlib>=3.10.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
]
